# CustomAgentHF

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.codacy/: cli-config.yaml  codacy.yaml
customagenthf/: __init__.py  backends.py  basic.py  cli.py  search.py  service.py  zeerak.py
customagenthf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
customagenthf/zeerak/: __init__.py  agents.py  cli.py  config.py  features.py  formatting.py  policy.py  rendering.py  routing.py  schemas.py
customagenthf/zeerak/prompts/: chat.txt  codekhana.txt  dehqan.txt  education.txt  hunar.txt  rahnama.txt  tabib.txt  zamvision.txt
examples/: 01_minimal_code_agent.py  02_search_tool_agent.py  03_model_backends.py  04_zeerak_feature_agents.py
tests/: test_service.py  test_zeerak_agents.py  test_zeerak_cli.py  test_zeerak_execution.py  test_zeerak_integration.py  test_zeerak_policy.py  test_zeerak_routing.py
