[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "customagenthf"
version = "0.1.0"
description = "Reusable smolagents starter package with Zeerak feature agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "httpx",
    "smolagents[toolkit]",
    "python-dotenv",
    "uvicorn",
]

[project.optional-dependencies]
litellm = ["smolagents[litellm]"]
transformers = ["smolagents[transformers]"]

[project.scripts]
customagenthf = "customagenthf.cli:main"
customagenthf-service = "customagenthf.service:main"

[tool.setuptools.packages.find]
include = ["customagenthf", "customagenthf.*"]

[tool.setuptools.package-data]
"customagenthf.zeerak" = ["prompts/*.txt"]
